# sandbox

./: .gitignore  LICENSE  README.md  builds.yaml  requirements.txt  requirements_lock.txt
.github/workflows/: docker-build.yml  push-system-builds.yaml
config/: default_sandbox_specification.json
open_core/: .bazelrc  MODULE.bazel  WORKSPACE
scripts/: builds_config.py  create_builds.py  maybe_install_cli.sh  utils.py
systems/cheese/: README.md  build.sh  build_and_push.sh  cheese.json  make_experiences.py  requirements_lock.txt  run_local.sh
systems/cheese/metrics/: Dockerfile  build.sh  cheese_metrics.py  requirements.txt
systems/cheese/src/: entrypoint.py
systems/docker_in_docker/: Dockerfile  README.md  build.sh  build_and_test.sh  entrypoint.sh
systems/drone/: Dockerfile  apply_params.py  build.sh  build_and_push.sh  entrypoint.sh  run_local.sh
systems/hello_world/: Dockerfile  README.md  build_and_push.sh  experience.json  log.json  make_experiences.py  make_experiences.sh  metrics.binproto  requirements.txt  requirements_lock.txt  run_local.sh  test.sh
systems/hello_world_old/: Dockerfile  build.sh  build_and_push.sh
systems/load_test/: Dockerfile  build.sh  build_and_push.sh  foo.sh  make_experiences.py  requirements.txt  requirements_lock.txt  run_local.sh
systems/log_ingest/: Dockerfile  entrypoint.sh
systems/perception/: .gitignore  README.md  Readme.md  owlvit.py  requirements.txt
systems/ros2_talker_listener/: README.md  docker-compose.base.yml  docker-compose.yml  run_local.sh  talker_listener.dockerfile
(+73 files in other folders)
