module(
    name = "sandbox",
    version = "0.0.10",
)

bazel_dep(name = "resim_open_core", version = "0.0.11")
bazel_dep(name = "rules_python", version = "0.31.0")

git_override(
  module_name = "resim_open_core",
  commit = "9deedc9a84a7b5b79f019a8b87986315a8cade3a",
  remote = "https://github.com/resim-ai/open-core",
)

register_toolchains(
    "@resim_open_core//resim/toolchain:cc_toolchain_for_k8",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.10",
)
